@@ -140,7 +140,7 @@ of "foo\.\scripts"
 ----------------------------------------------------------------------
  OmegaT 3.1.9 update 2
 ----------------------------------------------------------------------
-   1 Enhancement
+   2 Enhancements
    2 Bug fixes
    1 Localisation update
 ----------------------------------------------------------------------
@@ -149,6 +149,10 @@ of "foo\.\scripts"
   Implemented requests:
 
   - Updated LanguageTool to 2.2
+
+  - *.strings (Mac OS X localisation format) was added to the Key=value 
+filter. That's only a partial solution, as " and ; characters remain
+in the translatable text, and have to be preserved by the translator.
 
   Bug fixes:
 
